added API methods for managing categories
