# app/Http/Requests/StoreCategoryRequest.php
@@ -28,7 +28,17 @@ class StoreCategoryRequest extends FormRequest
         return [
             'name' => [
                 'required',
-                Rule::unique('categories', 'name')->where('user_id', Auth::user()->id)
+                'string',
+                Rule::unique('categories', 'name')->where('user_id', optional($this->user())->id)
+            ],
+        ];
+    }
+
+    public function bodyParameters()
+    {
+        return [
+            'name' => [
+                'description' => 'The name of the category.',
             ],
         ];
     }
